--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel='icon' href='assets/images/mtn2.JPG' type='image/x-icon' />
     <title>Reinwald Resume</title>
 
+
+
     <link rel="stylesheet"
         href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="stylesheet" href="./assets/css/reset.css">
@@ -16,6 +18,7 @@
 
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/modal.css">
+
 </head>
 
 <body>
@@ -229,52 +232,13 @@
         </div>
 
 
-        
+
         <!-- project modals -->
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
+        <button type="button" class="btn btn-primary" href="./assets/modals/modal1.html">
             Modal button test
         </button>
 
-        <div class="modal fade" id="staticBackdrop" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel"
-            aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="row">
-                            <div class="col border border-info">
-                                <div class="row border border-danger">
-                                    <img src="./assets/images/mtn.JPG" class="d-block w-100" alt="modalPicOne">
-                                </div>
-                                <div class="row border border-secondary">
-                                    <img src="./assets/images/mtn.JPG" class="d-block w-100" alt="modalPicOne">
-                                </div>
-                            </div>
-                            <div class="col border border-warning">
-                                <div class="row border border-dark">
-                                    <p>row 1</p>
-                                </div>
-                                <div class="row border border-primary">
-                                    <p>row 2</p>
-                                </div>
-                                <div class="row border border-light">
-                                    <p>row 3</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Understood</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+
 
         <br>
         <br>
@@ -289,9 +253,9 @@
         </div>
 
     </main>
-    
-<!-- scroll to top button -->
-<i onclick="topFunction()" id="topButton" title="Go to top" class="far fa-arrow-alt-circle-up"></i>
+
+    <!-- scroll to top button -->
+    <a id="topButton"></a>
 
 
 
@@ -326,11 +290,8 @@
 
 
 
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
