--- a/index.html
+++ b/index.html
@@ -121,15 +121,13 @@
                     <i class="fas fa-dice fa-6x iconCustom"></i>
                     <div>Number Guess Game</div>
                     <br>
-                    <!-- <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Bootstrap</li>
-                        <li class="list-group-item">jQuery</li>
-                    </ul> -->
                 </div>
                 <div class="card text-center back">
                     <div class="card-body back-content">
+                        <br/>
                         <h5 class="card-title">Number Guess Game</h5>
                         <hr />
+                        <br/>
                         <p class="card-text">A simple game of adding random numbers to match a given number.</p>
                     </div>
                 </div>
@@ -139,16 +137,13 @@
                     <i class="fas fa-music fa-6x iconCustom"></i>
                     <div>myo͞ozik</div>
                     <br>
-                    <!-- <ul class="list-group list-group-flush">
-                        <li class="list-group-item">HTML & CSS</li>
-                        <li class="list-group-item">Javascript</li>
-                        <li class="list-group-item">Front End APIs</li>
-                    </ul> -->
                 </div>
                 <div class="card text-center back">
                     <div class="card-body back-content">
+                        <br/>
                         <h5 class="card-title">myo͞ozik</h5>
                         <hr />
+                        <br/>
                         <p class="card-text">A venue finding app for concerts in a user given area.</p>
                     </div>
                 </div>
@@ -158,15 +153,13 @@
                     <i class="icon fas fa-server fa-6x iconCustom"></i>
                     <div>MySQL-Bamazon</div>
                     <br>
-                    <!-- <ul class="list-group list-group-flush">
-                        <li class="list-group-item">MySQL</li>
-                        <li class="list-group-item">Javascript</li>
-                    </ul> -->
                 </div>
                 <div class="card text-center back">
                     <div class="card-body back-content">
+                        <br/>
                         <h5 class="card-title">MySQL-Bamazon</h5>
                         <hr />
+                        <br/>
                         <p class="card-text">A practice application to familiarize myself with MySQL </p>
                     </div>
                 </div>
@@ -178,102 +171,65 @@
         <br>
 
         <!-- SKILLS -->
-        <div id="skills" class="container row">
-            <ul id="devicons">
-                <li>
-                    <i class="devicon-react-original-wordmark"></i>
-                </li>
-                <li>
-                    <i class="devicon-java-plain-wordmark"></i>
-                </li>
-                <li>
-                    <i class="devicon-mongodb-plain-wordmark"></i>
-                </li>
-                <li>
-                    <i class="devicon-jquery-plain-wordmark"></i>
-                </li>
-            </ul>
-        </div>
+        <div id="skills" class="container-fluid">
+            <div class="container-fluid row">
+                <ul id="devicons">
+                    <li>
+                        <i class="devicon-react-original-wordmark"></i>
+                    </li>
+                    <li>
+                        <i class="devicon-java-plain-wordmark"></i>
+                    </li>
+                    <li>
+                        <i class="devicon-mongodb-plain-wordmark"></i>
+                    </li>
+                    <li>
+                        <i class="devicon-jquery-plain-wordmark"></i>
+                    </li>
+                </ul>
+            </div>
 
-        <div class="container row">
-            <ul id="devicons">
-                <li>
-                    <i class="devicon-html5-plain-wordmark"></i>
-                </li>
-                <li>
-                    <i class="devicon-javascript-plain"></i>
-                </li>
-                <li>
-                    <i class="devicon-photoshop-line"></i>
-                </li>
-                <li>
-                    <i class="devicon-css3-plain-wordmark"></i>
-                </li>
-            </ul>
-        </div>
+            <div class="container-fluid row">
+                <ul id="devicons">
+                    <li>
+                        <i class="devicon-html5-plain-wordmark"></i>
+                    </li>
+                    <li>
+                        <i class="devicon-javascript-plain"></i>
+                    </li>
+                    <li>
+                        <i class="devicon-photoshop-line"></i>
+                    </li>
+                    <li>
+                        <i class="devicon-css3-plain-wordmark"></i>
+                    </li>
+                </ul>
+            </div>
 
-        <div class="container row">
-            <ul id="devicons">
-                <li>
-                    <i class="devicon-nodejs-plain-wordmark"></i>
-                </li>
-                <li>
-                    <i class="devicon-express-original-wordmark"></i>
-                </li>
-                <li>
-                    <i class="devicon-mysql-plain-wordmark"></i>
-                </li>
-            </ul>
-        </div>
-        </div>
-
-
-        
-        <!-- project modals -->
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
-            Modal button test
-        </button>
-
-        <div class="modal fade" id="staticBackdrop" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel"
-            aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="row">
-                            <div class="col border border-info">
-                                <div class="row border border-danger">
-                                    <img src="./assets/images/mtn.JPG" class="d-block w-100" alt="modalPicOne">
-                                </div>
-                                <div class="row border border-secondary">
-                                    <img src="./assets/images/mtn.JPG" class="d-block w-100" alt="modalPicOne">
-                                </div>
-                            </div>
-                            <div class="col border border-warning">
-                                <div class="row border border-dark">
-                                    <p>row 1</p>
-                                </div>
-                                <div class="row border border-primary">
-                                    <p>row 2</p>
-                                </div>
-                                <div class="row border border-light">
-                                    <p>row 3</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Understood</button>
-                    </div>
-                </div>
+            <div class="container-fluid row">
+                <ul id="devicons">
+                    <li>
+                        <i class="devicon-nodejs-plain-wordmark"></i>
+                    </li>
+                    <li>
+                        <i class="devicon-express-original-wordmark"></i>
+                    </li>
+                    <li>
+                        <i class="devicon-mysql-plain-wordmark"></i>
+                    </li>
+                </ul>
             </div>
         </div>
+
+
+
+
+        <!-- project modals -->
+        <button type="button" class="btn btn-primary" data-toggle="modal">
+            <a href="assets/modals/modalOne.html" rel="modal:open">test button</a>
+        </button>
+
+        
 
         <br>
         <br>
