--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
     <head>
         <!-- header -->
         <nav class="navbar fixed-top navbar-light shadow-sm p-3 mb-5 bg-white rounded text-muted">
-            <span class="h3 navbar-text">
-                Dillon Reinwald
+            <span class="h6 navbar-text">
+                About Me
+                <i class="fas fa-grip-lines-vertical"></i>
+                Projects
+                <i class="fas fa-grip-lines-vertical"></i>
+                Skills
             </span>
-            <span class="h6 navbar-text text-right">
-                Full-Stack Web Developer
-                <i class="fas fa-grip-lines-vertical"></i>
-                (949)923-8758
-                <i class="fas fa-grip-lines-vertical"></i>
-                dreinwaldmail@gmail.com
+            <span class="h3 navbar-text text-right">
+                Dillon Reinwald
             </span>
 
         </nav>
@@ -42,9 +42,9 @@
     </head>
 
     <main>
-        <header class="container-fluid row ">
+        <navBar class="container-fluid row ">
             <!-- navbar list -->
-            <div class="MainNav container-fluid align-middle col">
+            <div class="mainNav container-fluid align-middle col">
                 <ul id="navBar">
                     <li><a href="#aboutMe">About Me</a></li>
                     <li><a href="#projects">Projects</a></li>
@@ -53,9 +53,18 @@
                 </ul>
 
             </div>
-            <!-- picture -->
-            <div class="MainNav container-fluid col">
-                <div class="card mb-3" style="max-width: 540px;">
+
+        </navBar>
+
+
+        <br>
+        <br>
+        <br>
+
+        <!-- about me -->
+        <div id="aboutMe" class="container-fluid">
+            <div class="col">
+                <div class="card mb-3">
                     <div class="row no-gutters">
                         <div class="col-md-8">
                             <div class="card-body">
@@ -67,68 +76,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-
-        </header>
-
-
-        <br>
-        <br>
-        <br>
-
-        <!-- about me -->
-        <div id="aboutMe" class="container">
-            <div id="carousel" class="carousel slide carousel-fade p-3 mb-5 rounded" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="./assets/images/family.jpg" class="d-block w-100" alt="family">
-                        <div class="carousel-caption ">
-                            Family
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/images/flatirons.jpg" class="d-block w-100" alt="flatirons">
-                        <div class="carousel-caption ">
-                            Explorer
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/images/skateboardone.jpg" class="d-block w-100" alt="skateboard">
-                        <div class="carousel-caption ">
-                            Meditative
-                        </div>
-
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/images/snowboard.jpg" class="d-block w-100" alt="snowboard">
-                        <div class="carousel-caption ">
-                            Active
-                        </div>
-
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/images/icecream.jpg" class="d-block w-100" alt="icecream">
-                        <div class="carousel-caption ">
-                            Balanced
-                        </div>
-
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/images/skateboardstairs.jpg" class="d-block w-100" alt="stairs">
-                        <div class="carousel-caption ">
-                            Outgoing
-                        </div>
-
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
             </div>
         </div>
 
